<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/ylmn_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:contentDescription="@string/logo_preview"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:fontFamily="@font/lato_regular"
        android:textSize="@dimen/hd_sm_size"
        android:layout_marginTop="30dp"
        android:lineHeight="31.2sp"
        android:letterSpacing="0.02"
        android:textColor="@color/anti_flash_white"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/hd_size"
        android:lineHeight="59.8sp"
        android:letterSpacing="0.02"
        android:textColor="@color/anti_flash_white"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SignButton"
        android:text="@string/sign_in"
        android:layout_marginHorizontal="@dimen/btn_margin_horizontal"
        android:paddingHorizontal="60dp"
        android:drawableLeft="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/_2024_outfit_team_capstone"
        android:textSize="14sp"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/anti_flash_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>