<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="140dp"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:layout_marginEnd="12dp"
    android:background="@color/anti_flash_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="21dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@drawable/bg_image"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            android:src="@drawable/photo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outfit_name"
            android:layout_marginTop="5dp"
            android:textColor="@color/ylmn_blue"
            android:fontFamily="@font/lato_medium"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_item"
            android:text="@string/detail"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/lato_regular"
            android:textColor="@color/ylmn_blue"
            android:textSize="12sp"
            android:paddingVertical="5dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>