<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ylmn_blue"
    tools:context=".ui.SignActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/hd_sm_size"
        android:lineHeight="31.2sp"
        android:letterSpacing="0.02"
        android:textColor="@color/anti_flash_white"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/hd_size"
        android:lineHeight="59.8sp"
        android:letterSpacing="0.02"
        android:textColor="@color/anti_flash_white"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SignButton"
        android:text="@string/sign_in"
        android:layout_marginHorizontal="@dimen/btn_margin_horizontal"
        android:paddingHorizontal="60dp"
        android:drawableLeft="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>