<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/lato_medium"
                android:lineSpacingExtra="1sp"
                android:text="@string/welcome_back"
                android:textColor="@color/ylmn_blue"
                android:textSize="@dimen/nm_size" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:lineSpacingExtra="1sp"
                android:text="@string/stefanus_cecilio"
                android:textColor="@color/ylmn_blue"
                android:textSize="30sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:scaleType="fitCenter"
            android:background="@drawable/circle"
            android:src="@drawable/avatar" />
    </LinearLayout>
    
    <ImageView
        android:id="@+id/tv_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/photo"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/identity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintDimensionRatio="7:5" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_image">

        <Button
            android:id="@+id/button1"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ylmn_blue"
            android:fontFamily="@font/lato_regular"
            android:text="Galery"
            android:textColor="@color/anti_flash_white"
            android:textSize="@dimen/nm_size"
            app:strokeColor="@color/ylmn_blue" />

        <Button
            android:id="@+id/button2"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="Camera"
            android:textColor="@color/ylmn_blue"
            android:textSize="@dimen/nm_size"
            app:strokeColor="@color/ylmn_blue" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/outfit_recomendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outfit_recomendation"
        android:textColor="@color/ylmn_blue"
        android:textSize="@dimen/hd_sm_size"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/outfit_recomendation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>